--- a/Views/Announcements/Delete.cshtml
+++ b/Views/Announcements/Delete.cshtml
@@ -2,6 +2,17 @@
 
 @{
     ViewData["Title"] = "Delete Announcement";
+    
+    string GetCreatorDisplay(HomeownersSubdivision.Models.User? creator)
+    {
+        if (creator == null)
+            return "Unknown User";
+            
+        if (creator.Role == HomeownersSubdivision.Models.UserRole.Staff)
+            return "Staff";
+            
+        return creator.FirstName + " " + creator.LastName;
+    }
 }
 
 @await Html.PartialAsync("_LuxuryBackground")
@@ -59,7 +70,7 @@
                             <dd class="text-gray-900">
                                 @if (Model.Creator != null)
                                 {
-                                    @(Model.Creator.FirstName + " " + Model.Creator.LastName)
+                                    @GetCreatorDisplay(Model.Creator)
                                 }
                                 else
                                 {
