--- a/Views/Forum/Category.cshtml
+++ b/Views/Forum/Category.cshtml
@@ -96,7 +96,23 @@
                                     </div>
                                 </td>
                                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-700">
-                                    @topic.AuthorName
+                                    <div class="flex items-center">
+                                        <div class="flex-shrink-0">
+                                            @if (!string.IsNullOrEmpty(topic.AuthorAvatarUrl))
+                                            {
+                                                <img class="h-8 w-8 rounded-full object-cover" src="@topic.AuthorAvatarUrl" alt="@topic.AuthorName">
+                                            }
+                                            else
+                                            {
+                                                <div class="h-8 w-8 rounded-full bg-gray-200 flex items-center justify-center">
+                                                    <i class="bi bi-person text-gray-600"></i>
+                                                </div>
+                                            }
+                                        </div>
+                                        <div class="ml-3">
+                                            <span>@topic.AuthorName</span>
+                                        </div>
+                                    </div>
                                 </td>
                                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-700">
                                     @topic.ReplyCount
