--- a/Views/Reservations/Create.cshtml
+++ b/Views/Reservations/Create.cshtml
@@ -47,7 +47,7 @@
                     <div class="mb-2 text-sm" id="facilityHours"></div>
                 </div>
 
-                <h5 class="text-lg font-semibold text-gray-800 mt-4 mb-3 border-b pb-2 flex items-center">
+                <h5 class="text-lg font-semibold text-indigo-600 mt-4 mb-3 border-b pb-2 flex items-center">
                     <i class="fas fa-calendar-day mr-2"></i> Date and Time
                 </h5>
 
